Nightly fod scan div fps dfr 466 (#262)
* DFR-466: Fortify Setup